--- a/src/components/CardStack/CardStack.scss
+++ b/src/components/CardStack/CardStack.scss
@@ -33,7 +33,8 @@
     }
 
     & .info {
-      margin-top: 10px;
+      padding: 10px 10px 0 10px;
+
       display: flex;
       width: 100%;
       justify-content: space-between;
@@ -41,6 +42,9 @@
         font-size: 16px;
         font-weight: bold;
       }
+    }
+    & .bio {
+      margin: 15px 10px 0 10px;
     }
   }
 }
