--- a/src/components/CardStack/CardStack.scss
+++ b/src/components/CardStack/CardStack.scss
@@ -2,7 +2,12 @@
   position: relative;
   height: 460px;
   width: 300px;
-
+  -webkit-box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.04),
+    0 12px 24px 0 rgba(60, 82, 93, 0.06);
+  -moz-box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.04),
+    0 12px 24px 0 rgba(60, 82, 93, 0.06);
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.04),
+    0 12px 24px 0 rgba(60, 82, 93, 0.06);
   & .card {
     position: absolute;
     height: 100%;
@@ -14,12 +19,6 @@
     background-color: white;
     overflow: hidden;
     border-radius: 5px;
-    -webkit-box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.04),
-      0 12px 24px 0 rgba(60, 82, 93, 0.06);
-    -moz-box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.04),
-      0 12px 24px 0 rgba(60, 82, 93, 0.06);
-    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.04),
-      0 12px 24px 0 rgba(60, 82, 93, 0.06);
 
     & .picture {
       width: 100%;
@@ -45,6 +44,83 @@
     }
     & .bio {
       margin: 15px 10px 0 10px;
+    }
+  }
+}
+
+#popup {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  pointer-events: none;
+  transition: all 0.4s ease;
+  & .content {
+    z-index: 11;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    text-align: center;
+    height: 340px;
+    width: 80%;
+    border-radius: 10px;
+    background-color: white;
+    -webkit-box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.04),
+      0 12px 24px 0 rgba(60, 82, 93, 0.06);
+    -moz-box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.04),
+      0 12px 24px 0 rgba(60, 82, 93, 0.06);
+    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.04),
+      0 12px 24px 0 rgba(60, 82, 93, 0.06);
+
+    transform: scale(0.2);
+    transition: all 0.4s ease;
+    overflow: hidden;
+
+    & h1 {
+      z-index: 12;
+      padding: 10px;
+      position: absolute;
+      bottom: 15px;
+    }
+    & img {
+      z-index: 11;
+      position: absolute;
+      bottom: -200px;
+    }
+    & .close {
+      height: 24px;
+      width: 24px;
+      z-index: 15;
+      position: absolute;
+      top: 10px;
+      right: 10px;
+    }
+    & .image {
+      height: 200px;
+      width: 200px;
+      top: 20px;
+      background-size: contain;
+      background-repeat: no-repeat;
+      position: absolute;
+      background-position: center;
+      border-radius: 50%;
+    }
+  }
+
+  &.shown {
+    opacity: 1;
+    pointer-events: all;
+
+    & .content {
+      transform: scale(1);
     }
   }
 }
