--- a/src/views/Matches/Matches.scss
+++ b/src/views/Matches/Matches.scss
@@ -1,7 +1,7 @@
 .match-view {
   height: 100vh;
   width: 100vw;
-
+  overflow: hidden;
   & .matches-container {
     height: 100%;
     width: 100%;
@@ -12,11 +12,11 @@
       margin: 12px 0;
     }
     & .matches {
-      height: 80%;
+      height: 90%;
       overflow-y: scroll;
       border-top: 1px solid rgba(138, 132, 132, 0.5);
       border-bottom: 1px solid rgba(138, 132, 132, 0.5);
-      margin-bottom: 10%;
+      padding-bottom: 50px;
       overflow-x: hidden;
       & .match {
         display: flex;
